# todo-next-fastapi-poetry-app

./: .env  package.json  package.old.json  pnpm-lock.yaml  pyproject.toml
api/: _database.py  _settings.py  main.py  pyproject.toml
api/models/: _todo_model.py  _user_model.py
api/utils/: _service.py  _todo_service.py  _user_service.py  _utils.py  utils.py
api/v1/todo/: _create.py  _delete.py  _read.py  _todo.py
api/v1/user/: _create.py  _login.py  _read.py  _user.py
